# tymex-home-test

./: README.md
question_1/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  tox.ini
question_1/alembic/: env.py
question_1/alembic/versions/: 53434b4fa505_create_table_idempotency.py
question_1/api/: __init__.py  urls.py
question_1/apps/payments/: constants.py
question_1/apps/payments/apis/v1/: __init__.py  views.py
question_1/apps/payments/models/: payment.py
question_1/apps/payments/repositories/: __init__.py  payment_repo.py
question_1/apps/payments/schemas/: __init__.py  payment_schema.py
question_1/apps/payments/services/: core_service.py
question_1/apps/payments/tests/: factories.py
question_1/apps/payments/tests/api/: test_api_v1.py
question_1/common/mixins/: models.py
question_1/common/repository/: base.py
question_1/common/schemas/: enums.py  response.py
question_1/common/tests/: test_repository.py
question_1/config/: db.py  settings.py  urls.py
question_1/scripts/: shell.py
question_2/: Makefile  README.md  pyproject.toml  tox.ini
question_2/notif/: constants.py  notification.py  senders.py
question_2/tests/: test_notification.py
question_3/: README.md  question_code.py
question_4/: README.md
question_5/: README.md  question_code.py
question_6/: README.md  question_code.py
question_7/: README.md
