[project]
name = "notif"
version = "0.0.1"
description = ""
authors = [
    {name = "sam-val",email = "code@samval.dev"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "faker (>=37.4.0,<38.0.0)"
]

[tool.poetry]
packages = [
    {include = "notif"}
]
 
[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 90
